--- a/templates/contact_us.html
+++ b/templates/contact_us.html
@@ -82,49 +82,42 @@
           <img src="/static/deepika.jpg" alt="Team Member 1" class="team-photo">
           <p class="team-name">Ms. DEEPIKA.V</p>
           <p class="team-degree">B.TECH ARTIFICIAL INTELLIGENCE AND DATA SCIENCE</p>
-          <p class="team-mobile">Mobile: +91 8270203724 </p>
-          <p class="team-email">Email: deepesh20@gmail.com</p>
+          <p class="team-email">Email: deeparamya2004@gmail.com</p>
         </div>
         <div class="team-member">
           <img src="/static/dayana.jpg" alt="Team Member 2" class="team-photo">
           <p class="team-name">Ms. DAYANA.M</p>
           <p class="team-degree">B.TECH ARTIFICIAL INTELLIGENCE AND DATA SCIENCE</p>
-          <p class="team-mobile">Mobile: +91 7607252774</p>
           <p class="team-email">Email: dayajk2801@gmail.com</p>
         </div>
         <div class="team-member">
           <img src="/static/haritha.jpg" alt="Team Member 3" class="team-photo">
           <p class="team-name">Ms. HARITHA.M</p>
           <p class="team-degree">B.TECH ARTIFICIAL INTELLIGENCE AND DATA SCIENCE</p>
-          <p class="team-mobile">Mobile: +91 9940066361</p>
           <p class="team-email">Email: harithamurali79@gmail.com</p>
         </div>
         <div class="team-member">
           <img src="/static/jaya.jpg" alt="Team Member 4" class="team-photo">
           <p class="team-name">Ms. JAYA.R</p>
           <p class="team-degree">B.TECH ARTIFICIAL INTELLIGENCE AND DATA SCIENCE</p>
-          <p class="team-mobile">Mobile: +91 9361943911</p>
           <p class="team-email">Email: jaya.ravi3911@gmail.com</p>
         </div>
         <div class="team-member">
           <img src="/static/gomathy.jpg" alt="Team Member 5" class="team-photo">
           <p class="team-name">Ms. GOMATHY.K</p>
           <p class="team-degree">B.TECH ARTIFICIAL INTELLIGENCE AND DATA SCIENCE</p>
-          <p class="team-mobile">Mobile: +91 866795207</p>
           <p class="team-email">Email: kgomathy4@gmail.com</p>
         </div>
         <div class="team-member">
           <img src="/static/janani.jpg" alt="Team Member 6" class="team-photo">
           <p class="team-name">Ms. JANANI.H</p>
           <p class="team-degree">B.TECH ARTIFICIAL INTELLIGENCE AND DATA SCIENCE</p>
-          <p class="team-mobile">Mobile: +91 7550249397</p>
           <p class="team-email">Email: jananih239@gmail.com</p>
         </div>
         <div class="team-member">
             <img src="/static/magimai.jpg" alt="Team Member 6" class="team-photo">
             <p class="team-name">Ms. MAGIMAI NAYAGI.Y</p>
             <p class="team-degree">B.TECH ARTIFICIAL INTELLIGENCE AND DATA SCIENCE</p>
-            <p class="team-mobile">Mobile: +91 7695978347</p>
             <p class="team-email">Email: ymagimainayagi@gmail.com</p>
           </div>
       </div>
